src/styles/styles.scss
html {
    min-height: 100%;
}

body {
    font-family: 'Roboto', sans-serif;
    background: rgb(248, 248, 248);
    padding-top: 50px;
    min-height: 100%;
}
  
.btn-basic {
    margin-top: 60px;
    box-sizing: border-box;
    font-family: Helvetica, Arial, sans-serif;
    display: inline-block;
    font-size: 1.8em;
    font-weight: 700;
    letter-spacing: 2px;
    line-height: 1;
    text-align: center;
    text-transform: uppercase;
    touch-action: manipulation;
    transition-duration: 33ms;
    transition-property: background-color, border-color, color, box-shadow, filter, transform;
    user-select: none;
    vertical-align: middle;
    transform: translate3d(0px, 0px, 0px);
    position: relative;
    background-color: rgb(29, 185, 84);
    color: rgb(255, 255, 255);
    border-width: 0px;
    border-style: initial;
    border-color: initial;
    border-image: initial;
    border-radius: 30px;
    text-decoration: none;
    padding: 50px 10px;
    cursor: pointer;
    &:hover {
        transform: scale(1.04);
        background-color: rgb(30, 215, 96);
        color: rgb(255, 255, 255);
        text-decoration: none;
    }
    &:focus {
        outline: none;
    }
}

.btn-red {
    background-color: #ec3a3a;
    &:hover {
        background-color:#fd0100
    }
}

.btn-small {
    font-size: 10px;
    padding: 20px;
    margin: 50px 5px 10px 5px;
    border-radius: 15px;
    min-width: 110px;
}

.logo {
    display: flex;
    align-items: center;
    margin-left: 30px;
    margin-bottom: 40px;
    font-family: monospace;
    font-size: 20px;
}

.logo strong {
    padding-left: 10px;
    font-size: 1.2rem;
}

#footer {
    position: absolute;
    bottom: 0;
    font-size: 12px;
    text-align: right;
    width: 100%;
    right: 20px;
}

#toast-container {
  position: absolute;
  top: 30px;
  right: 60px;
}

#home, #instruction {
  h1 {
      font-size: 3rem;
  }
} 

.summary-info{
    font-size: 1.2rem;
}

@media all and (max-width: 767px) {
  #quiz h1 {
    font-size: 1.6rem;
  }
  .btn-basic {
    margin-top: 20px;
    font-size: 1.2rem;
    letter-spacing: 1px;
    line-height: 1.3;
    padding: 25px 15px;
  }
  .btn-red {
    font-size: 10px;
    padding: 20px;
  }
  #root {
    position: relative;
    padding-bottom: 30px;
  }
  #home, #instruction {
      h1 {
          font-size: 2.5rem;
      }
  } 
}

